--- a/view/header.html
+++ b/view/header.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Pokedex</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 <nav class="navbar-expand-md nav-fill bg-dark-subtle">
@@ -12,7 +12,7 @@
         <div class="row">
 
             <div class="align-content-sm-around col-sm-4 col-md-4 ">
-                <a class="img-fluid" href="./index.php"><img src="./imagenes/pokebola.png" width="100" alt="Logo"></a>
+                <a class="img-fluid" href="../index.php"><img src="../imagenes/pokebola.png" width="100" alt="Logo"></a>
             </div>
 
             <div class="col-sm-8 col-md-4 d-flex d-flex align-items-sm-center">
@@ -21,7 +21,7 @@
 
             <div class="col-sm-12 col-md-4 d-flex align-items-sm-center">
                 <div>
-                    <form method="post" name="login" action="login.php">
+                    <form method="post" name="login" action="../login.php">
                         <input type="text" name="user" placeholder="User" class="col-sm-5">
                         <input type="password" name="password" id="password" placeholder="Password" class="col-sm-5" >
                         <button type="submit" formaction="registrarse.php" class="col-sm-5">Register</button>
