--- a/view/user_view.mustache
+++ b/view/user_view.mustache
@@ -1,2 +1,9 @@
 {{>header}}
 <div><h1>Aca va el titulo</h1></div>
+<div>
+    {{#user}}
+        <tr>
+            <td>{{email}}</td>
+        </tr>
+    {{/user}}
+</div>
