se puede mandar los datos de los formularios

--- a/view/partial/header.mustache
+++ b/view/partial/header.mustache
@@ -20,16 +20,14 @@
             </div>
 
             <div class="col-sm-12 col-md-4 d-flex align-items-sm-center">
+
                 <div>
-                    <form method="post" name="login" action="../login.php">
+                    <form method="post" name="login" action="/index.php">
                         <input type="text" name="user" placeholder="User" class="col-sm-5">
                         <input type="password" name="password" id="password" placeholder="Password" class="col-sm-5" >
                         <button type="submit" formaction="registrarse.php" class="col-sm-5">Register</button>
-                        <button type="submit" formaction="login.php" class="text-bg-primary col-sm-5">Log In</button>
+                        <button type="submit" formaction="index.php?module=user&action=login" class="text-bg-primary col-sm-5">Log In</button>
                     </form>
-                    <div>
-
-                    </div>
 
                 </div>
 
