--- a/view/partial/header.mustache
+++ b/view/partial/header.mustache
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Pokedex</title>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <script src="../js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <nav class="navbar-expand-md nav-fill bg-dark-subtle">
@@ -20,16 +23,25 @@
             </div>
 
             <div class="col-sm-12 col-md-4 d-flex align-items-sm-center">
+                {{#user}}
+                    <h3>{{usuario}}</h3>
+                    <a href="index.php?module=user&action=logOut"> <button>cerrar cesion </button></a>
+                {{/user}}
+                {{^user}}
+                    <div>
+                        <form method="post" name="login" action="/index.php">
+                            <input type="text" name="user" placeholder="User" class="col-sm-5">
+                            <input type="password" name="password" id="password" placeholder="Password" class="col-sm-5">
+                            <!--                        <button type="submit" formaction="registrarse.php" class="col-sm-5">Register</button>-->
+                            <button type="submit" formaction="index.php?module=user&action=login"
+                                    class="text-bg-primary col-sm-5">Log In
+                            </button>
+                        </form>
 
-                <div>
-                    <form method="post" name="login" action="/index.php">
-                        <input type="text" name="user" placeholder="User" class="col-sm-5">
-                        <input type="password" name="password" id="password" placeholder="Password" class="col-sm-5" >
-                        <button type="submit" formaction="registrarse.php" class="col-sm-5">Register</button>
-                        <button type="submit" formaction="index.php?module=user&action=login" class="text-bg-primary col-sm-5">Log In</button>
-                    </form>
+                    </div>
+                {{/user}}
 
-                </div>
+
 
             </div>
 
