--- a/view/home_view.mustache
+++ b/view/home_view.mustache
@@ -1,9 +1,10 @@
 {{>header}}
-<div><h1>Aca va el titulo</h1></div>
+<div><h1>Este es el home</h1></div>
 <div>
     {{#user}}
         <tr>
             <td>parece que no lo agarra</td>
+            <td>{{email}}</td>
             <td>{{email}}</td>
         </tr>
     {{/user}}
