--- a/view/user_view.mustache
+++ b/view/user_view.mustache
@@ -1,9 +1,10 @@
 {{>header}}
-<div><h1>Aca va el titulo</h1></div>
+<div><h1>Esta es user</h1></div>
 <div>
     {{#user}}
         <tr>
             <td>{{email}}</td>
+            <td>{{usuario}}</td>
         </tr>
     {{/user}}
 </div>
