--- a/view/partial/header.mustache
+++ b/view/partial/header.mustache
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pokedex</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/public/css/styles.css">
+    <link rel="stylesheet" href="/public/css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
             crossorigin="anonymous"></script>
@@ -15,7 +19,9 @@
         <div class="row">
 
             <div class="align-content-sm-around col-sm-4 col-md-4 ">
-                <a class="img-fluid" href="../index.php"><img src="../imagenes/pokebola.png" width="100" alt="Logo"></a>
+                <a class="img-fluid" href="/">
+
+                    <img src="/public/imagenes/pokebola.png" width="100" alt="Logo"></a>
             </div>
 
             <div class="col-sm-8 col-md-4 d-flex d-flex align-items-sm-center">
@@ -23,24 +29,48 @@
             </div>
 
             <div class="col-sm-12 col-md-4 d-flex align-items-sm-center">
-                {{#user}}
-                    <h3>{{usuario}}</h3>
-                    <a href="index.php?module=user&action=logOut"> <button>cerrar cesion </button></a>
-                {{/user}}
-                {{^user}}
-                    <div>
-                        <form method="post" name="login" action="/index.php">
-                            <input type="text" name="user" placeholder="User" class="col-sm-5">
-                            <input type="password" name="password" id="password" placeholder="Password" class="col-sm-5">
-                            <!--                        <button type="submit" formaction="registrarse.php" class="col-sm-5">Register</button>-->
-                            <button type="submit" formaction="index.php?module=user&action=login"
-                                    class="text-bg-primary col-sm-5">Log In
-                            </button>
-                        </form>
+<!--                {{#user}}-->
+<!--                    <h3>{{usuario}}</h3>-->
+<!--               <h1> {{ enSesion}}</h1>-->
+<!--                    <a href="/user/logout"> <button>cerrar cesion </button></a>-->
+<!--                {{/user}}-->
 
-                    </div>
-                {{/user}}
+                <div>
+                    {{^logged}}
+                        <div class="container">
+                            <form method="post" name="login" action="/index.php">
+                                <input type="text" name="user" placeholder="User" class="col-sm-5">
+                                <input type="password" name="password" id="password" placeholder="Password" class="col-sm-5">
+                                <!--                        <button type="submit" formaction="registrarse.php" class="col-sm-5">Register</button>-->
+                                <button type="submit" formaction="/user/login"
+                                        class="text-bg-primary col-sm-5">Log In
+                                </button>
+                            </form>
+                            {{#msj}}
+                                <div class="mensaje" style="visibility: visible; color: red;">
 
+                                    {{msj}}
+                                </div>
+                            {{/msj}}
+
+                        </div>
+
+                    {{/logged}}
+
+
+
+
+                    {{#logged}}
+                        {{#user}}
+                            <tr>
+
+                                <td>{{nick}}</td>
+                                <td>{{email}}</td>
+                            </tr>
+                        {{/user}}
+                        <a href="/user/logout"> <button>cerrar cesion </button></a>
+                    {{/logged}}
+                </div>
 
 
             </div>
@@ -59,6 +89,4 @@
 
 
 </nav>
-
-</body>
-</html>
+<main>
