--- a/view/user_view.mustache
+++ b/view/user_view.mustache
@@ -1,10 +1,1 @@
-
-<div><h1>Esta es </h1></div>
-<div>
-    {{#user}}
-        <tr>
-            <td>{{email}}</td>
-            <td>{{usuario}}</td>
-        </tr>
-    {{/user}}
-</div>
+<h1>sarasa</h1>
