--- a/view/partial/header.mustache
+++ b/view/partial/header.mustache
@@ -25,7 +25,7 @@
             </div>
 
             <div class="col-sm-8 col-md-4 d-flex d-flex align-items-sm-center">
-                <h1 class="h1 text-center text-white">Pokedex</h1>
+                <h1 class="h1 text-center text-white">POKEDEX</h1>
             </div>
 
             <div class="col-sm-12 col-md-4 d-flex align-items-sm-center">
@@ -62,7 +62,7 @@
                                 </tr>
                             {{/user}}
                             <a href="/user/logout">
-                                <button class="btn btn-primary">cerrar cesion</button>
+                                <button class="btn btn-primary">CERRAR SESIÓN</button>
                             </a>
                         {{/logged}}
                     </div>
