--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,12 @@
+footer {
+    /* Estilo para el footer */
+    position: absolute;
+    bottom: 0; /* Lo posiciona al final de la página */
+    width: 100%; /* Ocupa todo el ancho de la página */
+    background-color: black; /* Color de fondo */
+    color: white; /* Color del texto */
+    padding: 20px;
+}
 footer i{
     font-size: 2rem;
     margin-left: 1.2rem;
