--- a/view/partial/header.mustache
+++ b/view/partial/header.mustache
@@ -71,9 +71,9 @@
         </div>
     </div>
     <div class="container nav-fill">
-        <form action="buscar.php" method="get">
-            <input type="search" name="buscado" id="buscado" class="col-sm-10">
-            <input type="button" value="Buscar" class="col-sm-1">
+        <form action="/home/listByName" method="get">
+            <input type="search" name="buscado" id="buscado"  autocomplete="on" class="col-sm-10">
+            <input type="submit" value="Buscar" class="col-sm-1">
         </form>
     </div>
 </nav>
