--- a/view/updatePokemon_view.mustache
+++ b/view/updatePokemon_view.mustache
@@ -37,9 +37,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-12 d-flex justify-content-center">
-                    <button type="submit" class="btn btn-success">Enviar</button>
+                <div class="row">
+                <div class="col-6 col-md-6 d-flex justify-content-end">
+                    <!-- Botón "Volver" -->
+                    <a href="/" class="btn btn-primary">Volver</a>
                 </div>
+                <div class="col-6 col-md-6 d-flex justify-content-start">
+                    <!-- Botón "Enviar" -->
+                    <button type="submit" class="btn btn-success">Actualizar</button>
+                </div>
+            </div>
+
+
             </form>
         {{/pokemon}}
     </div>
